@@ -13,7 +13,11 @@ function S = entropy(s, sys, alpha)
 %  entropy of entanglement of the state s wrt. the partitioning
 %  defined by sys. Entropy of entanglement is only defined for pure states.
 
-% Ville Bergholm 2009-2014
+% Ville Bergholm 2009-2017
+
+
+global qit
+
 
 if nargin < 3
     alpha = 1;
@@ -31,12 +35,15 @@ if is_ket(s)
   S = 0;
 else
   p = eig(s.data);
-  if alpha ~= 1
+  if alpha == 1
+      % Von Neumann entropy, avoid trouble with the logarithm
+      p(find(p < qit.tol)) = 1;  % ignore small eigenvalues
+      S = -p'*log2(p);
+  elseif alpha == 0
+      % Renyi entropy of order zero, avoid numeric issues with exponentiation
+      S = log2(sum(p >= qit.tol));  % ignore small eigenvalues
+  else
       % Renyi entropy
       S = log2(sum(p .^ alpha)) / (1-alpha);
-  else
-      % Von Neumann entropy
-      p(find(p == 0)) = 1; % avoid trouble with the logarithm
-      S = -p'*log2(p);
   end
 end
